# Underwater-Image-Simulation

./: .gitignore  README.md  TASKS.md  config.py  config.yaml  environment.yml  pyproject.toml  requirements.txt
CycleGAN/: README.md  datasets.py  gan_models.py  gan_utils.py
Encoder_Decoder_Direct/: README.md
Pix2Pix_GAN/: README.md  gan_models.py  gan_utils.py
Technique_1/: count.py  data_4.py  loss.py  model.py  model_3D.py  model_weight.py  perform_test.py  perform_test_1.py  perform_test_1_make_3D.py  perform_test_1_weight_1.py  perform_test_1_weight_1_make_3D.py  perform_test_1_weight_2.py  perform_test_1_weight_2_make_3D.py  ricardo_code_1.py  train_3_1.py  train_3_1_Make_3D.py  train_3_1_test.py  train_3_1_weight_1.py  train_3_1_weight_1_Make_3D.py  train_3_1_weight_1_test.py  train_3_1_weight_2.py  train_3_1_weight_2_Make_3D.py  train_3_1_weight_2_test.py  utils.py
Technique_2/: data_3.py  model.py  model_3D.py  model_3D_weight.py  model_3D_weight_make_3D.py  model_weight_1.py  model_weight_2.py  model_weight_2_make_3D.py  model_weight_make_3D.py  perform_test.py  perform_test_1.py  perform_test_1_make_3D.py  perform_test_1_weight_1.py  perform_test_1_weight_1_make_3D.py  perform_test_1_weight_2.py  perform_test_1_weight_2_make_3D.py  readme.txt  readme_weight_1.txt  readme_weight_2.txt  ricardo_code_1.py  ricardo_underwater_image.py  train_4.py  train_4_Make_3D.py  train_4_weight_1.py  train_4_weight_1_Make_3D.py  train_4_weight_2.py  train_4_weight_2_Make_3D.py
Technique_3/: data_4_Make_3D.py  data_4_Make_3D_Test.py  loss.py  model_weight_2.py  (+6 more)
(+162 files in other folders)
