[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "underwater-depth"
version = "0.1.0"
description = "Underwater image / monocular depth estimation across Techniques 1-4 (NYU, Make3D)."
readme = "README.md"
requires-python = ">=3.8,<3.11"
dependencies = [
    "torch>=1.12,<3",
    "torchvision>=0.13",
    "tensorboardX>=2.5",
    "opencv-python>=4.5",
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "joblib>=1.1",
    "Pillow>=9.0",
    "pandas>=1.3",
    "h5py>=3.6",
    "pyyaml>=6.0",
    "matplotlib>=3.4",
]

# The shared code lives in top-level packages at the repo root. Installing the
# project in editable mode (`pip install -e .`) puts them on the import path so
# `import models`, `import data`, `import utils`, `import config` resolve from
# anywhere — no sys.path manipulation needed.
[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "data*", "utils*"]
